[package]
name = "polygon-netflow-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
ethers = { version = "2", default-features = false, features = ["ws", "rustls", "abigen", "macros", "ethers-async-std"] }
futures = "0.3"
hex = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros"] }
thiserror = "1"
tokio = { version = "1.39", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1